# first-exwork

./: .env.example  .gitignore  .replit  DEPLOYMENT.md  Dockerfile  QUICKSTART.md  README.md  deploy.sh  docker-compose.yml  ecosystem.config.js.example  nginx.conf.example  package-lock.json  package.json  pyproject.toml
attached_assets/: Pasted-Create-a-fully-functional-B2B-platform-that-connects-businesses-needing-tech-solutions-with-software-1742218588415.txt  Pasted-Create-a-professional-modern-homepage-for-a-B2B-platform-that-connects-businesses-with-tech-service-1742220320649.txt
client/: index.html
client/src/: App.tsx
client/src/components/dashboard/: BusinessAnalytics.tsx  MessageChat.tsx  PricePrediction.tsx  ProjectCard.tsx  ProjectRecommendations.tsx  ProposalCard.tsx  ProposalEvaluation.tsx  SellerRecommendations.tsx  Sidebar.tsx
client/src/components/layout/: AuthLayout.tsx  DashboardLayout.tsx
client/src/components/stripe/: CheckoutForm.tsx
client/src/components/ui/: badge.tsx  progress.tsx
client/src/context/: AuthContext.tsx
client/src/hooks/: use-auth-guard.ts
client/src/lib/: api.ts  utils.ts
client/src/pages/: LandingPage.tsx
ml/: __init__.py  config.py
ml/api/: __init__.py  server.py
ml/data/: __init__.py  db_connector.py
ml/models/: __init__.py  price_prediction.py  recommendation.py
ml/services/: __init__.py  analytics.py
scripts/: deploy.sh  package.sh  run_ml_api.py  setup-database.js  start_ml_api.js  start_ml_api_prod.js  start_servers.js
server/: auth.ts  email.ts  routes.ts  storage.ts
shared/: schema.ts
(+16 files in other folders)
